--- a/lib/dedalo/html_page/html/html_page.phtml
+++ b/lib/dedalo/html_page/html/html_page.phtml
@@ -19,58 +19,63 @@ header('Content-Type: text/html');
 <title><?php echo $page_title ?></title>
 <link rel="shortcut icon" href="<?php echo DEDALO_ROOT_WEB ?>/favicon.ico" />
 <?php echo trim($css_link_code); ?>
+<?php
+$page_globals = new stdClass();
+	# version
+	$page_globals->dedalo_version 			= DEDALO_VERSION;
+	# lang
+	$page_globals->dedalo_application_lang 	= DEDALO_APPLICATION_LANG;
+	$page_globals->dedalo_data_lang 		= DEDALO_DATA_LANG;
+	$page_globals->dedalo_data_nolan 		= DEDALO_DATA_NOLAN;
+	# parent
+	$page_globals->_parent 	= isset($parent) ? (int)$parent : '';
+	# tipos
+	$page_globals->tipo 		= $tipo;
+	$page_globals->section_tipo = defined('SECTION_TIPO') ? SECTION_TIPO : null;
+	# top
+	$page_globals->top_tipo 	= TOP_TIPO;
+	$page_globals->top_id 		= TOP_ID;
+	# modo
+	$page_globals->modo 		= isset($modo) ? $modo : null;
+	# caller_tipo
+	$page_globals->caller_tipo 	= $caller_tipo;
+	# context_name
+	$page_globals->context_name = $context_name;
+	# tag_id
+	$page_globals->tag_id 		= isset($_REQUEST["tag_id"]) ? safe_xss($_REQUEST["tag_id"]) : "";
+	# user_id
+	$page_globals->user_id 		= isset($user_id) ? $user_id : null;
+	# username
+	$page_globals->username 	= isset($username) ? $username : null;
+	# full_username
+	$page_globals->full_username= isset($full_username) ? $full_username : null;
+	# is_global_admin
+	$page_globals->is_global_admin = (bool)$is_global_admin;
+	# components_to_refresh
+	$page_globals->components_to_refresh = [];
+	# portal
+	$page_globals->portal_tipo 			= isset($_REQUEST["portal_tipo"]) ? safe_xss($_REQUEST["portal_tipo"]) : null;
+	$page_globals->portal_parent 		= isset($_REQUEST["portal_parent"]) ? safe_xss($_REQUEST["portal_parent"]) : null;
+	$page_globals->portal_section_tipo 	= isset($_REQUEST["portal_section_tipo"]) ? safe_xss($_REQUEST["portal_section_tipo"]) : null;
+	# id_path
+	$page_globals->id_path 		= isset($_REQUEST["id_path"]) ? safe_xss($_REQUEST["id_path"]) : null;
+	# dedalo_protect_media_files
+	$page_globals->dedalo_protect_media_files 	= (defined('DEDALO_PROTECT_MEDIA_FILES') && DEDALO_PROTECT_MEDIA_FILES===true) ? 1 : 0;
+	# notifications
+	$page_globals->DEDALO_NOTIFICATIONS 	  	= defined("DEDALO_NOTIFICATIONS") ? (int)DEDALO_NOTIFICATIONS : 0;
+	$page_globals->DEDALO_PUBLICATION_ALERT 	= defined("DEDALO_PUBLICATION_ALERT") ? (int)DEDALO_PUBLICATION_ALERT : 0;
+	# float_window_features
+	$page_globals->float_window_features 		= json_decode('{small:"menubar=no,location=no,resizable=yes,scrollbars=yes,status=no,width=470,height=415"}');
+?>
+
 <script>
-var DEDALO_LIB_BASE_URL='<?php echo DEDALO_LIB_BASE_URL ?>',DEDALO_ROOT_WEB='<?php echo DEDALO_ROOT_WEB ?>',DEBUG=SHOW_DEBUG=<?php var_export(SHOW_DEBUG); ?>,SHOW_DEVELOPER=<?php var_export(SHOW_DEVELOPER); ?>,DEDALO_SECTION_ID_TEMP='<?php echo DEDALO_SECTION_ID_TEMP ?>',USE_CDN='<?php echo USE_CDN ?>';
-var page_globals = {
-	dedalo_version:'<?php echo DEDALO_VERSION ?>',
-	dedalo_application_lang:'<?php echo DEDALO_APPLICATION_LANG ?>',
-	dedalo_data_lang:'<?php echo DEDALO_DATA_LANG ?>',
-	dedalo_data_nolan:'<?php echo DEDALO_DATA_NOLAN ?>',
-	_parent:<?php echo isset($parent) ? (int)$parent : "''" ?>,
-	tipo:'<?php echo $tipo ?>',
-	section_tipo:"<?php echo defined('SECTION_TIPO') ? SECTION_TIPO : '' ?>",
-	modo:'<?php echo $modo ?>',
-	caller_tipo:'<?php echo $caller_tipo ?>',
-	context_name:'<?php if(isset($context_name)) echo $context_name ?>',
-	top_tipo:'<?php echo TOP_TIPO; #if(isset($top_tipo)) echo $top_tipo ?>',
-	top_id:'<?php echo TOP_ID;	#if(isset($top_id)) echo $top_id ?>',
-	tag_id:'<?php echo isset($_REQUEST["tag_id"]) ? safe_xss($_REQUEST["tag_id"]) : "" ?>',
-	user_id:'<?php if(isset($user_id)) echo $user_id ?>',
-	username:'<?php if(isset($username)) echo $username ?>',
-	full_username:'<?php if(isset($full_username)) echo $full_username ?>',
-	is_global_admin:<?php var_export($is_global_admin); ?>,
-	components_to_refresh:[],
-<?php if (isset($_REQUEST["portal_tipo"])) { ?>
-	portal_tipo:'<?php echo safe_xss($_REQUEST["portal_tipo"]) ?>',
-<?php } ?>
-<?php if (isset($_REQUEST["portal_parent"])) { ?>
-	portal_parent:'<?php echo safe_xss($_REQUEST["portal_parent"]) ?>',
-<?php } ?>
-<?php if (isset($_REQUEST["portal_section_tipo"])) { ?>
-	portal_section_tipo:'<?php echo safe_xss($_REQUEST["portal_section_tipo"]) ?>',
-<?php } ?>
-<?php #if (isset($_REQUEST["id_path"])) {   ?>
-	id_path:'<?php echo isset($_REQUEST["id_path"]) ? safe_xss($_REQUEST["id_path"]):'' ?>',
-<?php #} ?>
-<?php if (defined('DEDALO_PROTECT_MEDIA_FILES') && DEDALO_PROTECT_MEDIA_FILES===true) {   ?>
-	dedalo_protect_media_files:1,
-<?php } ?>
-	DEDALO_NOTIFICATIONS:<?php echo defined("DEDALO_NOTIFICATIONS") ? (int)DEDALO_NOTIFICATIONS : 0 ?>,
-	DEDALO_PUBLICATION_ALERT:<?php echo defined("DEDALO_PUBLICATION_ALERT") ? (int)DEDALO_PUBLICATION_ALERT : 0 ?>,
-	float_window_features : {
-		small:"menubar=no,location=no,resizable=yes,scrollbars=yes,status=no,width=470,height=415"
-	}
-}
-<?php if(SHOW_DEBUG===true) {?>
-//console.log("section_tipo: "+page_globals.section_tipo)
-if(page_globals.section_tipo.length<3) {
-	alert("page_globals.section_tipo not defined: "+page_globals.section_tipo)
-}
-//console.log("id_path:"+page_globals.id_path)
-<?php } //if(SHOW_DEBUG===true) {?>
-<?php echo js::get_json_elements_data(); ?>
+const page_globals=<?php echo SHOW_DEBUG===true ? json_encode($page_globals, JSON_PRETTY_PRINT) : json_encode($page_globals) ?>;
+<?php #echo js::get_json_elements_data(); ?>
 </script>
 <?php echo trim($js_link_code) ?>
+<script>
+
+</script>
 </head>
 <body>
 <div id="html_page_wrap" class="<?php echo "html_page_wrap_{$modo} html_page_wrap_{$tipo}"; if(SHOW_DEBUG===true && DEVELOPMENT_SERVER===true) {echo " daleks";}?>">
