Security update; enforce for prevent XSS

--- a/lib/dedalo/tools/tool_import_av/html/jquery_upload.phtml
+++ b/lib/dedalo/tools/tool_import_av/html/jquery_upload.phtml
@@ -118,7 +118,7 @@
         </td>
         <td>
             {% if (file.deleteUrl) { %}
-                <button class="btn btn-danger delete" data-type="{%=file.deleteType%}" data-url="{%=file.deleteUrl%}&button_tipo=<?php echo $button_tipo ?>"{% if (file.deleteWithCredentials) { %} data-xhr-fields='{"withCredentials":true}'{% } %}>
+                <button class="btn btn-danger delete" data-type="{%=file.deleteType%}" data-url="{%=file.deleteUrl%}&button_tipo=<?php echo safe_xss($button_tipo) ?>"{% if (file.deleteWithCredentials) { %} data-xhr-fields='{"withCredentials":true}'{% } %}>
                     <i class="glyphicon glyphicon-trash"></i>
                     <span><?php echo label::get_label('borrar')?></span>
                 </button>
