--- a/lib/dedalo/component_password/html/component_password_simple.phtml
+++ b/lib/dedalo/component_password/html/component_password_simple.phtml
@@ -3,29 +3,29 @@
 	# VISUALIZADOR HTML	
 	
 	
-	#print "\n<!-- PASSWORD [$tipo][$parent] -->";
-	print "\n<div class=\"css_wrap_password\" >";
+	print "<div class=\"css_wrap_password\">";
 	
 	# ETIQUETA (LABEL)
 	$html_label = component_common_draw::draw_label($this);
 	
 	# CONTENIDO (INPUT)
-	$html_contenido  = '';	
-	$html_contenido .= "\n <input class=\"css_password\" type=\"password\"
-	name=\"{$tipo}\"
-	data-tipo=\"{$tipo}\" data-modo=\"login\" data-section_tipo=\"{$section_tipo}\" data-parent=\"{$parent}\"
-	value=\"\"
-	title=\"$html_title\"
-	placeholder=\"$label\"
-	";
-	$html_contenido .= " />";
-	
+	$html_content  = '';	
+	$html_content .= "<input class=\"css_password\" type=\"password\" ";
+	$html_content .= "name=\"{$tipo}\" ";
+	$html_content .= "data-tipo=\"{$tipo}\" ";
+	$html_content .= "data-modo=\"login\" ";
+	$html_content .= "data-section_tipo=\"{$section_tipo}\" ";
+	$html_content .= "data-parent=\"{$parent}\" ";
+	$html_content .= "value=\"\" ";
+	$html_content .= "title=\"$html_title\" ";
+	$html_content .= "placeholder=\"$label\" ";
+	$html_content .= "/>";	
 	
 	
 	# PRINT HTML
 	print $html_label;
-	print $html_contenido;
+	print $html_content;
 	
 	
-	print "\n</div>\n\n"; //wrap
+	print "</div>"; //wrap
 ?>
